--- a/www/employeedetails.html
+++ b/www/employeedetails.html
@@ -8,7 +8,7 @@
 <div id="detailsPage" data-role="page" data-add-back-btn="true">
 
 	<div data-role="header">
-		<h1>Employee Details</h1>
+		<h1>Szczegóły</h1>
 	</div>
 
   <div data-role="content"> 
