--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Employee Directory</title>
+<title>LokalizatorLekarza.pl</title>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <link rel="stylesheet" href="css/jquery.mobile-1.0rc1.min.css" />
 <link rel="stylesheet" href="css/styles.css" />
@@ -12,7 +12,7 @@
 <div id="employeeListPage" data-role="page" >
 
 	<div data-role="header" data-position="fixed">
-		<h1>Employee Directory</h1>
+		<h1>Lekarze Specjaliści</h1>
 	</div>
 
 	<div data-role="content">
