--- a/www/reportlist.html
+++ b/www/reportlist.html
@@ -8,7 +8,7 @@
 <div id="reportListPage" data-role="page" data-add-back-btn="true">
 
 	<div data-role="header">
-		<h1>Direct Reports</h1>
+		<h1>Podwładni</h1>
 	</div>
 
 	<div data-role="content">
