--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@
 	</div>
 
 	<div data-role="content">
-         <ul id="employeeList" data-role="listview" data-filter="true"></ul>
+         <ul id="employeeList" data-role="listview" data-filter-placeholder="Wyszukaj lekarza..." data-filter="true"></ul>
     </div>		
 
 </div>
