--- a/www/employeedetails.html
+++ b/www/employeedetails.html
@@ -5,7 +5,7 @@
     
 <body>
 
-<div id="detailsPage" data-role="page" data-add-back-btn="true">
+<div id="detailsPage" data-role="page" data-back-btn-text="Wstecz" data-add-back-btn="true">
 
 	<div data-role="header">
 		<h1>Szczegóły</h1>
