--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <link rel="stylesheet" href="css/jquery.mobile-1.0rc1.min.css" />
 <link rel="stylesheet" href="css/styles.css" />
+<script src="js/app.js"></script>
 </head>
     
 <body>
@@ -14,7 +15,26 @@
 	<div data-role="header" data-position="fixed">
 		<h1>Lekarze Specjaliści</h1>
 	</div>
-
+	<div id="menu">
+<h3>Menu</h3>
+    <ul>
+        <li class="active"><a href="#home" class="contentLink">Home </a></li>
+        <li><a href="#home" class="contentLink">About </a></li>
+        <li><a href="#home" class="contentLink">Portfolio </a></li>
+        <li><a href="#home" class="contentLink">Contact </a></li>
+    </ul>
+</div>
+<div data-role="page" class="pages" id="home">
+    <div data-role="header">
+    <a href="#"class="showMenu">Menu</a>
+        <h1>FB Style Menu</h1>
+    </div><!-- /header -->
+    <div data-role="content">
+        <p><strong>Note: You can swipe right/left to show/close menu.</strong></p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    </div><!-- /content -->
+</div><!-- /page -->
 	<div data-role="content">
          <ul id="employeeList" data-role="listview" data-autodividers="true" data-filter-placeholder="Wyszukaj lekarza..." data-filter="true"></ul>
     </div>		
@@ -26,7 +46,6 @@
 <script src="js/employeelist.js"></script>
 <script src="js/employeedetails.js"></script>
 <script src="js/reportlist.js"></script>
-
 </body>
 
 </html>
