--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,8 @@
 
 	<div data-role="header" data-position="fixed">
 		<h1>Lekarze Specjalisci</h1>
+		<a href="opcje.html" data-icon="gear" class="ui-btn-right">Opcje</a>
+	<span class="ui-title" />
 	</div>
 
 	<div data-role="content">
