--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
 
 	<div data-role="header" data-position="fixed">
 		<h1>Lekarze Specjalisci</h1>
-		<a href="logowanie.html" data-icon="gear" class="ui-btn-right">Logowanie</a>
+		<a href="login.php" data-icon="gear" class="ui-btn-right">Logowanie</a>
 	<span class="ui-title" />
 	</div>
 
@@ -24,6 +24,7 @@
 </div>
 
 <script src="js/jquery.js"></script>
+<script src="js/jquery.mobile-1.0rc1.min.js"></script>
 <script src="js/employeelist.js"></script>
 <script src="js/employeedetails.js"></script>
 <script src="js/reportlist.js"></script>
