--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
 
 	<div data-role="header" data-position="fixed">
 		<h1>Lekarze Specjalisci</h1>
-		<a href="login.php" data-icon="gear" class="ui-btn-right">Logowanie</a>
+		<a href="logowanie.html" data-icon="gear" class="ui-btn-right">Logowanie</a>
 	<span class="ui-title" />
 	</div>
 
