--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>jQM Complex Demo</title>
+    <title>LokalizatorLekarza.pl</title>
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0"/>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
@@ -18,14 +18,14 @@
             <form id="check-user" class="ui-body ui-body-a ui-corner-all" data-ajax="false">
                 <fieldset>
                     <div data-role="fieldcontain">
-                        <label for="username">Enter your username:</label>
+                        <label for="username">Login:</label>
                         <input type="text" value="" name="username" id="username"/>
                     </div>                                 
                     <div data-role="fieldcontain">                                     
-                        <label for="password">Enter your password:</label>
+                        <label for="password">Haslo:</label>
                         <input type="password" value="" name="password" id="password"/>
                     </div>
-                    <input type="button" data-theme="b" name="submit" id="submit" value="Submit">
+                    <input type="button" data-theme="b" name="submit" id="submit" value="Zaloguj">
                 </fieldset>
             </form>                             
         </div>
@@ -36,16 +36,19 @@
     </div>
     <div data-role="page" id="second">
         <div data-theme="a" data-role="header">
-            <h3>Welcome Page</h3>
+            <h3>Witaj</h3>
         </div>
  
-        <div data-role="content">
-            Welcome
-        </div>
+       <div data-role="content">
+         <ul id="employeeList" data-role="listview" data-autodividers="true" data-filter-placeholder="Wyszukaj lekarza..." data-filter="true"></ul>
+    </div>		
  
         <div data-theme="a" data-role="footer" data-position="fixed">
-            <h3>Page footer</h3>
+            <h3>LokalizatorLekarza.pl</h3>
         </div>
     </div>
+<script src="js/employeelist.js"></script>
+<script src="js/employeedetails.js"></script>
+<script src="js/reportlist.js"></script>
 </body>
 </html>
