--- a/www/index.html
+++ b/www/index.html
@@ -47,6 +47,8 @@
             <h3>LokalizatorLekarza.pl</h3>
         </div>
     </div>
+<script src="js/jquery.js"></script>
+<script src="js/jquery.mobile-1.0rc1.min.js"></script>
 <script src="js/employeelist.js"></script>
 <script src="js/employeedetails.js"></script>
 <script src="js/reportlist.js"></script>
