--- a/www/index.html
+++ b/www/index.html
@@ -1,54 +1,34 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
 <head>
-    <title>LokalizatorLekarza.pl</title>
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0"/>
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
-    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
-    <script src="js/index.js"></script>
+<title>LokalizatorLekarza.pl</title>
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
+<link rel="stylesheet" href="css/jquery.mobile-1.0rc1.min.css" />
+<link rel="stylesheet" href="css/styles.css" />
 </head>
+    
 <body>
-    <div data-role="page" id="login" data-theme="b">
-        <div data-role="header" data-theme="a">
-            <h3>Login Page</h3>
-        </div>
- 
-        <div data-role="content">
-            <form id="check-user" class="ui-body ui-body-a ui-corner-all" data-ajax="false">
-                <fieldset>
-                    <div data-role="fieldcontain">
-                        <label for="username">Login:</label>
-                        <input type="text" value="" name="username" id="username"/>
-                    </div>                                 
-                    <div data-role="fieldcontain">                                     
-                        <label for="password">Haslo:</label>
-                        <input type="password" value="" name="password" id="password"/>
-                    </div>
-                    <input type="button" data-theme="b" name="submit" id="submit" value="Zaloguj">
-                </fieldset>
-            </form>                             
-        </div>
- 
-        <div data-theme="a" data-role="footer" data-position="fixed">
- 
-        </div>
-    </div>
-    <div data-role="page" id="second">
-        <div data-theme="a" data-role="header">
-            <h3>Witaj</h3>
-        </div>
- 
-       <div data-role="content">
+        
+<div id="employeeListPage" data-role="page" >
+
+	<div data-role="header" data-position="fixed">
+		<h1>Lekarze Specjalisci</h1>
+		<a href="logowanie.html" data-icon="gear" class="ui-btn-right">Logowanie</a>
+	<span class="ui-title" />
+	</div>
+
+	<div data-role="content">
          <ul id="employeeList" data-role="listview" data-autodividers="true" data-filter-placeholder="Wyszukaj lekarza..." data-filter="true"></ul>
     </div>		
- 
-        <div data-theme="a" data-role="footer" data-position="fixed">
-            <h3>LokalizatorLekarza.pl</h3>
-        </div>
-    </div>
+
+</div>
+
+<script src="js/jquery.js"></script>
+<script src="js/jquery.mobile-1.0rc1.min.js"></script>
 <script src="js/employeelist.js"></script>
 <script src="js/employeedetails.js"></script>
 <script src="js/reportlist.js"></script>
+
 </body>
+
 </html>
