--- a/www/index.html
+++ b/www/index.html
@@ -3,8 +3,9 @@
 <head>
 <title>LokalizatorLekarza.pl</title>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<link rel="stylesheet" href="css/jquery.mobile-1.0rc1.min.css" />
-<link rel="stylesheet" href="css/styles.css" />
+<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
 </head>
     
 <body>
@@ -23,8 +24,6 @@
 
 </div>
 
-<script src="js/jquery.js"></script>
-<script src="js/jquery.mobile-1.0rc1.min.js"></script>
 <script src="js/employeelist.js"></script>
 <script src="js/employeedetails.js"></script>
 <script src="js/reportlist.js"></script>
