--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
  
         </div>
     </div>
-    <div data-role="page" id="second">
+    <div data-role="page" id="employeeListPage">
         <div data-theme="a" data-role="header">
             <h3>Witaj</h3>
         </div>
