--- a/www/index.html
+++ b/www/index.html
@@ -40,7 +40,7 @@
         </div>
  
        <div data-role="content">
-         <ul id="employeeList" data-role="listview" data-autodividers="true" data-filter-placeholder="Wyszukaj lekarza..." data-filter="true"></ul>
+         <ul id="employeeList" data-role="listview" data-filter-placeholder="Wyszukaj lekarza..." data-filter="true"></ul>
     </div>      
  
         <div data-theme="a" data-role="footer" data-position="fixed">
