--- a/www/employeedetails.html
+++ b/www/employeedetails.html
@@ -1,6 +1,9 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+      <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+    <script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
 </head>
     
 <body>
@@ -25,7 +28,9 @@
   </div>
 
 </div>
-
+<script src="js/employeelist.js"></script>
+<script src="js/employeedetails.js"></script>
+<script src="js/reportlist.js"></script>
 </body>
 
 </html>
